--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap');
 
-$epilogue: 'Epilogue'
+
+
+// body {
+// $epilogue: 'Epilogue'; 
+// margin: 0;
+
+// }
 
 
