--- a/src/styles/scss/_header.scss
+++ b/src/styles/scss/_header.scss
@@ -1,7 +1,8 @@
 .header_container{
     display: flex;
     justify-content: space-between;
-    margin: 23px 10px;
+    margin: 23px 20px;
+    padding-top: 5px;
       
     img:nth-child(2) {
          height: 20px;
